--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
 pandas
 numpy
-tensorflow-macos
-matplotlib
-scipy
 nltk
-sckit-learn
-jupyter
 textblob
-memory-profiler
-logging
+gcloud
+google-cloud-storage
