--- a/.dockerignore
+++ b/.dockerignore
@@ -3,3 +3,10 @@ notebooks/
 LICENSE
 README.md
 tests/
+mlruns/
+saved_models/
+src/
+env/
+__pycache__/
+utils/__pycache__/
+utils/__old_preprocessing.py
