--- a/requirements_app.txt
+++ b/requirements_app.txt
@@ -1,11 +1,11 @@
-pandas
-numpy
-matplotlib
-seaborn
+pandas == 2.2.3
+numpy == 1.23.5
+matplotlib == 3.9.2
+seaborn == 0.13.2
 tensorflow == 2.14.0
-streamlit
-nltk
-textblob
+streamlit == 1.40.1
+nltk == 3.9.1
+textblob == 0.18.0.post0
 gcloud
 google-cloud-storage
 python-dotenv
