--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
-pandas
-numpy
-nltk
-textblob
-gcloud
+pandas == 2.2.3
+numpy == 1.23.5
+matplotlib == 3.9.2
+seaborn == 0.13.2
+tensorflow == 2.14.0
+streamlit == 1.40.1
+nltk == 3.9.1
+textblob == 0.18.0.post0
+google-api-core  == 2.23.0
+google-auth == 2.36.0
+google-auth-oauthlib == 1.0.0
+google-cloud == 0.34.0
+google-cloud-core == 2.4.1
 google-cloud-storage
-python-dotenv
+google-cloud-translate
+python-dotenv == 1.0.1
+huggingface-hub == 0.26.3
+transformers == 4.46.3
+tokenizers == 0.20.3
+scikit-learn == 1.5.2
+
